--- a/devagram/package.json
+++ b/devagram/package.json
@@ -9,8 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.3",
     "axios": "^1.6.2",
     "expo": "~49.0.15",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "~11.4.0",
     "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
     "react": "^18.2.0",
