--- a/devagram/package.json
+++ b/devagram/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
+    "@react-navigation/native-stack": "^6.9.18",
     "axios": "^1.6.2",
     "expo": "~49.0.15",
     "expo-app-loading": "^2.1.1",
@@ -19,7 +20,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.6",
-    "react-native-web": "~0.19.6"
+    "react-native-svg": "5.3.0",
+    "react-native-web": "~0.19.6",
+    "@react-native-async-storage/async-storage": "1.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
